[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/enemies/Level1/tobirama_edo_nzc_sheet_by_frank14kilate_d6gll9_by_gogeta10_d6k5wqk-fullview.png" type="Texture" id=1]
[ext_resource path="res://hashirama.gd" type="Script" id=2]
[ext_resource path="res://Hitboxes and Hurtboxes/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 4226, 50, 89 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 50, 4226, 50, 89 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 100, 4226, 50, 89 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 150, 4226, 50, 89 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 200, 4226, 50, 89 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 250, 4226, 50, 89 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 304, 4226, 59, 89 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 363, 4226, 59, 89 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 50, 4223, 50, 103 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=10]
radius = 17.0
height = 54.0

[sub_resource type="CapsuleShape2D" id=11]
radius = 45.0017
height = 517.997

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 14.5, 46 )

[node name="hashirama" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 326, 244 )
frames = SubResource( 9 )
animation = "idle"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 332, 247 )
shape = SubResource( 10 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 531, 237 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( 139, 225 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="attack" type="Area2D" parent="."]
position = Vector2( 327, 249 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack"]
position = Vector2( 6, -2 )
rotation = 1.57079
shape = SubResource( 11 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 31
collision_mask = 31

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 325, 246 )
shape = SubResource( 13 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 324, 283.2 )
scale = Vector2( 3, 0.7 )
texture = ExtResource( 4 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="attack" to="." method="_on_attack_body_entered"]
[connection signal="body_exited" from="attack" to="." method="_on_attack_body_exited"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hurtbox"]
